--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body{margin: 0;
 padding: 0;}
-
+body{background-color: bisque; margin: 30px;padding: 10px;}
 section{
     margin: 10px;
     padding: 10px;
 }
 h1{
-    font-size: ;
+
     color: darkorange;
     
-    background-color: black;  height: 100px; width: 300px;
+    background-color: black; margin: 50px; height: 100px; width: 400px;
 }
 ol{
-    background-color: bisque;
+    background-color: aqua;
 }
+img{height: 200px;width: 400px;margin: 50px;padding: 30px;}
