--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ section{
     margin: 10px;
     padding: 10px;
 }
-img{height: 200px;width: 400px;margin: 50px;padding: 30px;}
+img{height: 400px;width: 85%;margin: 30px;padding: 100px;}
 ol{
     background-color: aqua;
 }
