--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{margin: 0;
 padding: 0;}
+
 body{background-color: bisque; margin: 30px;padding: 10px;}
+
 h1{color: gold; background-color: black;margin: 10px;border: 10p;
 padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 10px;}
+
 section{
     margin: 10px;
     padding: 10px;
 }
-img{height: 400px;  width: 85%;  margin: 30px;  padding: 100px;}
 ol{
     background-color: aqua;
-}img{height: 30px;width: 30px;padding-top: 400px;padding-left: 10px;padding-bottom: 10px;}
+}
+img{height: 30px;width: 30px;padding-top: 400px;padding-left: 10px;padding-bottom: 10px;}
