--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ padding: 0;}
 
 body{background-color: bisque; margin: 30px;padding: 10px;}
 
-h1{color: gold; background-color: black;margin: 10px;border: 10p;
+h1{color: gold; background-color: black;margin: 10px;border: 10px;
 padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 10px;}
 
 section{
