--- a/style.css
+++ b/style.css
@@ -7,6 +7,6 @@ h1{color: gold; background-color: black;margin: 10px;border: 10px;
 padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 10px;}
 
 section{
-    background-color: black ; height: 48px;width: 80px; margin: 10px; padding: 10px; 
+    height: 48px;width: 80px; margin: 10px; padding: 10px; background-color: black;
 }
 
