--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ h1{color: gold; background-color: black;margin: 10px;border: 10px;
 padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 10px;}
 
 section{
-    height: 48px;width: 80px; margin: 10px; padding: 10px; background-color: black;
+   height: 48px;width: 80px; margin: 10px;background: black;
 }
-
+main{
+color: black; background-color: aqua; border-radius: 10px; 
+margin: 10px; width: 50%; height: 150px;padding: 10px;
